--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -16,5 +16,5 @@ jobs:
           git commit --allow-empty -m "Daily empty commit"
           git push
 
-      - name: Validation Step for test@example.com
+      - name: Validation Step for 22f3000162@ds.study.iitm.ac.in
         run: echo "This step validates the workflow for the user."
