--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -9,12 +9,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Create Empty Commit
+      - name: Configure Git - 22f3000162@ds.study.iitm.ac.in
         run: |
-          git config user.name "GitHub Actions Bot"
+          git config user.name "auto-commit"
           git config user.email "22f3000162@ds.study.iitm.ac.in"
-          git commit --allow-empty -m "Daily empty commit"
-          git push
 
-      - name: Validation Step for 22f3000162@ds.study.iitm.ac.in
-        run: echo "This step validates the workflow for the user."
+      - name: Make a dummy commit
+        run: |
+          # echo "Run at $(date -u +'%Y-%m-%dT%H:%M:%SZ')" > daily-log.txt
+          # git add daily-log.txt
+          # git commit -m "Daily commit at $(date -u)" || echo "Nothing to commit"
+          # git push origin main
