--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,13 +1,20 @@
-name: Daily Commit Workflow
-on:
-  workflow_dispatch: # Allows manual triggering only
+name: Daily Commit
 
+on:
+  schedule:
+    # This cron is set to run ~2 minutes from now (UTC)
+    - cron: '24 11 * * *'
+  workflow_dispatch:
+permissions:
+  contents: write
 jobs:
-  daily-commit:
+  commit:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: main 
 
       - name: Configure Git - 22f3000162@ds.study.iitm.ac.in
         run: |
